# libsensible

./: .clangd  .envrc  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: tests.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
scripts/: ci.sh  licences.sh  source_files.sh
sensible-allocators/: CMakeLists.txt
sensible-allocators/sensible-arena/: CMakeLists.txt  README.md
sensible-allocators/sensible-arena/include/: sensible-arena.h
sensible-allocators/sensible-arena/src/: sensible-arena.c  sensible-arena.h
sensible-allocators/sensible-arena/test/: CMakeLists.txt  bench.c  example.c  main.c  suite.c  suite.h
sensible-args/: CMakeLists.txt  README.md
sensible-args/examples/: CMakeLists.txt  example.c
sensible-args/include/: sensible-args.h
sensible-args/src/: sensible-args.c  sensible-args.h
sensible-args/test/: CMakeLists.txt  main.c  suite.c  suite.h
sensible-data-structures/: CMakeLists.txt  Makefile
sensible-data-structures/sensible-bitvec/: CMakeLists.txt  README.md
sensible-data-structures/sensible-bitvec/include/: sensible-bitvec.h
sensible-data-structures/sensible-bitvec/src/: sensible-bitvec.c  sensible-bitvec.h
sensible-data-structures/sensible-bitvec/test/: CMakeLists.txt  main.c  suite.c  suite.h
sensible-data-structures/src/: sensible-data-structures.c  sensible-data-structures.h
sensible-data-structures/test/: CMakeLists.txt  main.c  suite.c  suite.h
sensible-macros/: CMakeLists.txt
sensible-macros/include/: sensible-macros-hedley.h  sensible-macros.h
sensible-test/: .gitignore  CMakeLists.txt  README.md
sensible-test/examples/: CMakeLists.txt  example.c
sensible-test/include/: sensible-test.h
sensible-test/src/: sensible-test.c  sensible-test.h
sensible-test/test/: CMakeLists.txt  bench.c  main.c  suite.c  suite.h
sensible-timing/: CMakeLists.txt  README.md
sensible-timing/include/: sensible-timing-posix.h  sensible-timing-windows.h  sensible-timing.h
sensible-timing/src/: sensible-timing-posix.c  sensible-timing-windows.c  sensible-timing-windows.h  sensible-timing.c  sensible-timing.h
sensible-timing/test/: CMakeLists.txt  main.c  measure-sleep-variation.c  suite.c  suite.h
test/: CMakeLists.txt  main.c
